environments/production/increase-replicas.yml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: scheduler-api
spec:
  replicas: 3
